--- a/src/main/resources/templates/listaproductos.html
+++ b/src/main/resources/templates/listaproductos.html
@@ -1,12 +1,34 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
    <meta charset="UTF-8">
-
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
   </head>
   <body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-success">
+  <div class="container-fluid">
+    <a class="navbar-brand text-white" href="#">ZEPHYRA</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#">Administrar Productos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#">Administrar Usuarios</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#">Panel de Control</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
     <div class="container">
    <h2>Lista de productos</h2>
    <a th:href="@{/nuevoProducto}" class="btn btn-primary" role="button">Agregar Producto</a>
@@ -22,7 +44,7 @@
         <th>Fecha</th>
         <th>Color</th>
         <th>Talla</th>
-        <th>Acciones</th>
+        <th>Opciones</th>
     </tr>
 </thead>
 <tbody> 
