--- a/src/main/resources/templates/editarProducto.html
+++ b/src/main/resources/templates/editarProducto.html
@@ -1,13 +1,13 @@
+<!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Editar Producto</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Nuevo Producto</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+</head>
+<body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-success">
   <div class="container-fluid">
     <a class="navbar-brand text-white" href="#">ZEPHYRA</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -30,7 +30,45 @@
     </div>
   </div>
 </nav>
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
-  </body>
+
+<div class="container">
+    <h2>Editar Producto</h2>
+    <form th:action="@{/producto/actualizar}" th:object="${producto}" method="post">
+    <input type="hidden" th:field="*{idProducto}" />
+      <div class="mb-3">
+        <label for="nombre" class="form-label">Nombre:</label>
+        <input type="text" id="nombre" th:field="*{nombre}" class="form-control" readonly>
+      </div>
+      <div class="mb-3">
+        <label for="precio" class="form-label">Precio:</label>
+        <input type="text" id="precio" th:field="*{precio}" class="form-control" required>
+      </div>
+      <div class="mb-3">
+        <label for="detalle" class="form-label">Detalle:</label>
+        <textarea id="detalle" th:field="*{detalle}" class="form-control" rows="3"></textarea>
+      </div>
+      <div class="mb-3">
+        <label for="stock" class="form-label">Stock:</label>
+        <input type="number" id="stock" th:field="*{stock}" class="form-control" required>
+      </div>
+      <div class="mb-3">
+        <label for="fechaCreacion" class="form-label">Fecha de Creación:</label>
+        <input type="date" id="fechaCreacion" th:field="*{fechaCreacion}" class="form-control" required>
+      </div>
+      <div class="mb-3">
+        <label for="color" class="form-label">Color:</label>
+        <input type="text" id="color" th:field="*{color}" class="form-control">
+      </div>
+      <div class="mb-3">
+        <label for="tamaño" class="form-label">Talla:</label>
+        <input type="text" id="tamaño" th:field="*{tamaño}" class="form-control">
+      </div>
+      <button type="submit" class="btn btn-success">Guardar</button>
+      <a th:href="@{/listaproductos}" class="btn btn-secondary">Cancelar</a>
+
+      <hr>
+    </form>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+</body>
 </html>
