--- a/src/main/resources/templates/nuevoProducto.html
+++ b/src/main/resources/templates/nuevoProducto.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nuevo Producto</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+  <link rel="stylesheet" href="/css/Formulario.css">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-success">
@@ -55,13 +56,26 @@
         <input type="date" id="fechaCreacion" th:field="*{fechaCreacion}" class="form-control" required>
       </div>
       <div class="mb-3">
-        <label for="color" class="form-label">Color:</label>
-        <input type="text" id="color" th:field="*{color}" class="form-control">
-      </div>
-      <div class="mb-3">
-        <label for="tamaño" class="form-label">Talla:</label>
-        <input type="text" id="tamaño" th:field="*{tamaño}" class="form-control">
-      </div>
+  <label for="color" class="form-label">Color:</label>
+  <select id="color" th:field="*{color}" class="form-select">
+    <option value="" disabled th:selected="*{color} == null">Seleccione un color</option>
+    <option value="Negro" th:selected="*{color} == 'Negro'">Negro</option>
+    <option value="Blanco" th:selected="*{color} == 'Blanco'">Blanco</option>
+    <option value="Azul" th:selected="*{color} == 'Azul'">Azul</option>
+    <option value="Rojo" th:selected="*{color} == 'Rojo'">Rojo</option>
+  </select>
+</div>
+
+<div class="mb-3">
+  <label for="tamaño" class="form-label">Talla:</label>
+  <select id="tamaño" th:field="*{tamaño}" class="form-select">
+    <option value="" disabled th:selected="*{tamaño} == null">Seleccione una talla</option>
+    <option value="S" th:selected="*{tamaño} == 'S'">S</option>
+    <option value="M" th:selected="*{tamaño} == 'M'">M</option>
+    <option value="L" th:selected="*{tamaño} == 'L'">L</option>
+    <option value="XL" th:selected="*{tamaño} == 'XL'">XL</option>
+  </select>
+</div>
       <button type="submit" class="btn btn-success">Guardar</button>
       <a th:href="@{/listaproductos}" class="btn btn-secondary">Cancelar</a>
 
