--- a/src/main/resources/templates/editarProducto.html
+++ b/src/main/resources/templates/editarProducto.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="/css/Formulario.css">
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+<nav class="navbar navbar-expand-lg navbar-dark bg-success">
   <div class="container-fluid">
     <a class="navbar-brand text-white" href="#">ZEPHYRA</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -19,14 +19,17 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link text-white" href="#">Administrar Productos</a>
+          <a class="nav-link text-white" th:href="@{/listaproductos}">Administrar Productos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white" href="#">Administrar Usuarios</a>
+          <a class="nav-link text-white" href="*">Administrar Usuarios</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white" href="#">Panel de Control</a>
+          <a class="nav-link text-white" href="*">Panel de Control</a>
         </li>
+        <li class="nav-item">
+      <a class="nav-link text-white" th:href="@{/logout}">Cerrar sesión</a>
+      </li>
       </ul>
     </div>
   </div>
