--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -61,3 +61,9 @@ button {
 button:hover {
     background-color: #219150;
 }
+.error-msg {
+    margin-top: 15px;
+    text-align: center;
+    color: #e74c3c;
+    font-weight: bold;
+}
