--- a/src/main/resources/templates/listaproductos.html
+++ b/src/main/resources/templates/listaproductos.html
@@ -9,7 +9,7 @@
   <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-success">
   <div class="container-fluid">
-    <a class="navbar-brand text-white" href="#">ZEPHYRA</a>
+    <a class="navbar-brand text-white" th:href="@{/inicio}">ZEPHYRA</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
