--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,15 +7,16 @@
 </head>
 <body>
     <form th:action="@{/login}" method="post">
-        <label>Usuario:</label><input type="text" name="username" /><br/>
-        <label>Contraseña:</label><input type="password" name="password" /><br/>
-        <button type="submit">Ingresar</button>
-    </form> <br>
-    <div th:if="${param.error}">
+    <label>Usuario:</label><input type="text" name="username" /><br/>
+    <label>Contraseña:</label><input type="password" name="password" /><br/>
+    <button type="submit">Ingresar</button>
+
+    <div class="error-msg" th:if="${param.error}">
         Usuario o contraseña incorrectos.
     </div>
-    <div th:if="${param.logout}">
+    <div class="logout-msg" th:if="${param.logout}">
         Has cerrado sesión correctamente.
     </div>
+</form>
 </body>
 </html>
