--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1,6 +1,6 @@
 body {
+  background: url(../img/fondo.jpg);
     font-family: Arial, sans-serif;
-    background: #f4f7f8;
     display: flex;
     justify-content: center;
     align-items: center;
