--- a/src/main/resources/templates/inicio.html
+++ b/src/main/resources/templates/inicio.html
@@ -4,35 +4,28 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/Fondo.css">
   </head>
-  <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-success">
-  <div class="container-fluid">
-    <a class="navbar-brand text-white" href="#">ZEPHYRA</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+ <body>
+   <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+      <div class="container-fluid">
+         <a class="navbar-brand text-white" th:href="@{/inicio}">ZEPHYRA</a>
+         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+         </button>
+         <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+               <li class="nav-item"><a class="nav-link text-white" th:href="@{/listaproductos}">Administrar Productos</a></li>
+               <li class="nav-item"><a class="nav-link text-white" th:href="@{/usuarios}">Administrar Usuarios</a></li>
+               <li class="nav-item"><a class="nav-link text-white" href="#">Panel de Control</a></li>
+               <li class="nav-item"><a class="nav-link text-white" th:href="@{/logout}">Cerrar sesión</a></li>
+            </ul>
+         </div>
+      </div>
+   </nav>
 
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link text-white" th:href="@{/listaproductos}">Administrar Productos</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white" href="*">Administrar Usuarios</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white" href="*">Panel de Control</a>
-        </li>
-        <li class="nav-item">
-      <a class="nav-link text-white" th:href="@{/logout}">Cerrar sesión</a>
-      </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-<h1>Bienvenido a ZEPHYRA</h1>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
-  </body>
+   <h1>Bienvenido a ZEPHYRA</h1>
+
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+</body>
 </html>
