--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-light d-flex justify-content-center align-items-center vh-100">
     <div class="card shadow p-4" style="width: 100%; max-width: 400px;">
-        <h3 class="text-center text-success mb-4">Iniciar Sesión - Zephyra</h3>
+        <h3 class="text-center text-success mb-4">Iniciar Sesión</h3>
         <form th:action="@{/login}" method="post">
             <div class="mb-3">
                 <label class="form-label">Usuario</label>
