--- a/src/main/resources/templates/fragmentos/navbar.html
+++ b/src/main/resources/templates/fragmentos/navbar.html
@@ -24,18 +24,28 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" th:href="@{/Ventas}">
+                            <i class="bi bi-speedometer2"></i> Realizar Ventas
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/Compras}">
+                            <i class="bi bi-speedometer2"></i> Realizar Compra
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link dropdown-toggle" data-bs-toggle="collapse" href="#submenuReportes" role="button" aria-expanded="false" aria-controls="submenuReportes">
                             <i class="bi bi-bar-chart-line-fill"></i> Reportes
                         </a>
                         <div class="collapse submenu" id="submenuReportes">
-                            <a class="nav-link" href="#"><i class="bi bi-file-earmark-text"></i> Gestión de Ventas</a>
-                            <a class="nav-link" href="#"><i class="bi bi-cart4"></i> Gestión de Compras</a>
-                            <a class="nav-link" href="#"><i class="bi bi-box"></i> Gestión de Inventario</a>
-                            <a class="nav-link" href="#"><i class="bi bi-box"></i> Gestión de Proveedores</a>
+                            <a class="nav-link" th:href="@{/GestionVentas}"><i class="bi bi-file-earmark-text"></i> Gestión de Ventas</a>
+                            <a class="nav-link" th:href="@{/GestionCompras}"><i class="bi bi-cart4"></i> Gestión de Compras</a>
+                            <a class="nav-link" th:href="@{/GestionInventario}"><i class="bi bi-box"></i> Gestión de Inventario</a>
+                            <a class="nav-link" th:href="@{/GestionProveedores}"><i class="bi bi-box"></i> Gestión de Proveedores</a>
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" th:href="@{/PanelControl}">
                             <i class="bi bi-speedometer2"></i> Panel de Control
                         </a>
                     </li>
