Interfaz de venta

--- a/src/main/resources/templates/listaproductos.html
+++ b/src/main/resources/templates/listaproductos.html
@@ -13,7 +13,7 @@
 <div class="main-content">
     <div class="container">
    <h2>Lista de productos</h2>
-   <a th:href="@{/nuevoProducto}" class="btn btn-primary" role="button">Agregar Producto</a>
+   <a th:href="@{/nuevoProducto}" class="btn btn-primary" role="button">Crear Producto</a>
    <br><br>
    <table class="table table-striped table-hover">
        <thead>
