--- a/src/main/resources/templates/fragmentos/navbar.html
+++ b/src/main/resources/templates/fragmentos/navbar.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title th:replace=>ZEPHYRA</title>
+    <title>ZEPHYRA</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 
@@ -25,7 +25,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" th:href="@{/Ventas}">
-                            <i class="bi bi-speedometer2"></i> Realizar Ventas
+                            <i class="bi bi-speedometer2"></i> Realizar Venta
                         </a>
                     </li>
                     <li class="nav-item">
