--- a/src/main/resources/templates/Ventas.html
+++ b/src/main/resources/templates/Ventas.html
@@ -36,6 +36,8 @@
                 <thead>
                     <tr>
                         <th>Producto</th>
+                        <th>Color</th>
+                        <th>Talla</th>
                         <th>Precio</th>
                         <th>Stock</th>
                         <th>Acción</th>
@@ -88,14 +90,14 @@
 
             <div class="mb-3" id="pagoTarjeta" style="display: none;">
                 <label for="numeroTarjeta" class="form-label">Número de tarjeta:</label>
-                <input type="text" class="form-control" id="numeroTarjeta" placeholder="XXXX-XXXX-XXXX-XXXX">
-                <input type="text" class="form-control" id="ff/vv" placeholder="ff/vv">
-                <input type="text" class="form-control" id="cvv" placeholder="cvv">
+                <input type="text" class="form-control" id="numeroTarjeta" placeholder="XXXX-XXXX-XXXX-XXXX"><br>
+                <input type="text" class="form-control" id="ff/vv" placeholder="ff/vv"><br>
+                <input type="text" class="form-control" id="cvv" placeholder="cvv"><br>
             </div>
 
             <div class="mb-3" id="pagoYape" style="display: none;">
                 <label class="form-label">Escanea el QR con Yape:</label><br>
-                <img src="/img/qrYape.jpg" alt="QR Yape" style="width: 150px; height: 150px;">
+                <img src="/img/qrYape.jpg" alt="QR Yape" style="width: 200px; height: 200px; display: center" >
             </div>
 
             <div class="d-flex justify-content-end gap-2">
