--- a/src/main/resources/templates/listaproductos.html
+++ b/src/main/resources/templates/listaproductos.html
@@ -1,52 +1,63 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Productos</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/Listas.css">
-    <link rel="stylesheet" href="/css/sidebar.css">
-    <link rel="stylesheet" href="/css/Fondo.css">
-  </head>
-  <body>
-<div th:replace="fragmentos/navbar :: navbar"></div>
-<div class="main-content">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Productos</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+  <link rel="stylesheet" href="/css/Listas.css">
+  <link rel="stylesheet" href="/css/sidebar.css">
+  <link rel="stylesheet" href="/css/Fondo.css">
+</head>
+
+<body>
+  <div th:replace="fragmentos/navbar :: navbar"></div>
+  <div class="main-content">
     <div class="container">
-   <h2>Lista de productos</h2>
-   <a th:href="@{/nuevoProducto}" class="btn btn-primary" role="button">Crear Producto</a>
-   <br><br>
-   <table class="table table-striped table-hover">
-       <thead>
-    <tr class="table-primary">
-        <th>Nro</th>               
-        <th>Nombre</th>
-        <th>Precio</th>
-        <th>Detalle</th>
-        <th>Stock</th>
-        <th>Color</th>
-        <th>Talla</th>
-        <th>Opciones</th>
-    </tr>
-</thead>
-<tbody> 
-  <tr th:each="productos : ${listaproductos}">
-    <td th:text="${productos.idProducto}"></td>
-    <td th:text="${productos.nombre}"></td>
-    <td th:text="${productos.precio}"></td>
-    <td th:text="${productos.detalle}"></td>
-    <td th:text="${productos.stock}"></td>
-    <td th:text="${productos.color}"></td>
-    <td th:text="${productos.tamaño}"></td>
-    <td>
-      <a th:href="@{/producto/editar/{idProducto}(idProducto=${productos.idProducto})}" class="btn btn-warning">Editar</a>
-      <a th:href="@{/producto/eliminar/{idProducto}(idProducto=${productos.idProducto})}" class="btn btn-danger">Eliminar</a>
-    </td>
-  </tr>
-</tbody>
-  </table>
-  <br>   
+      <h2>Lista de productos</h2>
+      <a th:href="@{/nuevoProducto}" class="btn btn-primary" role="button">Crear Producto</a>
+      <br><br>
+      <table class="table table-striped table-hover">
+        <thead>
+          <tr class="table-primary">
+            <th>Nro</th>
+            <th>Nombre</th>
+            <th>Precio</th>
+            <th>Detalle</th>
+            <th>Stock</th>
+            <th>Color</th>
+            <th>Talla</th>
+            <th>Opciones</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr th:each="productos : ${listaproductos}">
+            <td th:text="${productos.idProducto}"></td>
+            <td th:text="${productos.nombre}"></td>
+            <td th:text="${productos.precio}"></td>
+            <td th:text="${productos.detalle}"></td>
+            <td th:text="${productos.stock}"></td>
+            <td th:text="${productos.color}"></td>
+            <td th:text="${productos.tamaño}"></td>
+            <td>
+              <a th:href="@{/producto/editar/{idProducto}(idProducto=${productos.idProducto})}"
+                class="btn btn-warning">Editar</a>
+              <a th:href="@{/producto/eliminar/{idProducto}(idProducto=${productos.idProducto})}"
+                class="btn btn-danger">Eliminar</a>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <br>
+      <a href="/productos/exportar">
+        <button>Exportar a Excel</button>
+      </a>
+    </div>
   </div>
-  </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
-  </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
