Exportacion de datos incorporada

--- a/src/main/resources/templates/listaproductos.html
+++ b/src/main/resources/templates/listaproductos.html
@@ -50,9 +50,9 @@
         </tbody>
       </table>
       <br>
-      <a href="/productos/exportar">
-        <button>Exportar a Excel</button>
-      </a>
+      <a href="/productos/exportar" class="btn btn-success">
+    <i class="bi bi-file-earmark-excel"></i> Exportar a Excel
+</a>
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
