--- a/src/main/resources/templates/Ventas.html
+++ b/src/main/resources/templates/Ventas.html
@@ -108,6 +108,7 @@
         </form>
     </div>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
 <script th:src="@{/js/ventas.js}"></script>
 </body>
 </html>
