--- a/src/main/resources/templates/fragmentos/navbar.html
+++ b/src/main/resources/templates/fragmentos/navbar.html
@@ -5,7 +5,7 @@
     <title>ZEPHYRA</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
     <div th:fragment="navbar">
@@ -44,11 +44,6 @@
                             <a class="nav-link" th:href="@{/GestionProveedores}"><i class="bi bi-box"></i> Gestión de Proveedores</a>
                             <a class="nav-link" th:href="@{/GestionClientes}"><i class="bi bi-box"></i> Gestión de Clientes</a>
                         </div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/PanelControl}">
-                            <i class="bi bi-speedometer2"></i> Panel de Control
-                        </a>
                     </li>
                 </ul>
             </div>
