--- a/src/main/resources/templates/editarUsuario.html
+++ b/src/main/resources/templates/editarUsuario.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>Editar Usuario</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
   <link rel="stylesheet" href="/css/Formulario.css" />
   <link rel="stylesheet" href="/css/sidebar.css" />
   <link rel="stylesheet" href="/css/Fondo.css" />
