--- a/src/main/resources/templates/fragmentos/navbar.html
+++ b/src/main/resources/templates/fragmentos/navbar.html
@@ -44,7 +44,7 @@
                             <a class="nav-link" th:href="@{/GestionCompras}"><i class="bi bi-cart4"></i> Gestión de Compras</a>
                             <a class="nav-link" th:href="@{/GestionInventario}"><i class="bi bi-box"></i> Gestión de Inventario</a>
                             <a class="nav-link" th:href="@{/GestionProveedores}"><i class="bi bi-box"></i> Gestión de Proveedores</a>
-                            <a class="nav-link" th:href="@{/GestionClientes}"><i class="bi bi-box"></i> Gestión de Clientes</a>
+                            <a class="nav-link" th:href="@{/clientes}"><i class="bi bi-box"></i> Gestión de Clientes</a>
                         </div>
                     </li>
                 </ul>
