--- a/src/main/resources/templates/listaUsuario.html
+++ b/src/main/resources/templates/listaUsuario.html
@@ -43,9 +43,9 @@
                               th:classappend="${usuario.enabled} ? 'text-success fw-bold' : 'text-danger fw-bold'"></span>
                     </td>
                     <td>
-    <a th:href="@{/usuarios/editar/{id}(id=${usuario.id})}" class="btn btn-warning btn-sm">Editar</a>
+    <a th:href="@{/usuarios/editar/{id}(id=${usuario.id})}" class="btn btn-warning btn-sm"><i class="bi bi-pencil-square"></i>Editar</a>
     <a th:href="@{/usuarios/eliminar/{id}(id=${usuario.id})}" class="btn btn-danger btn-sm"
-       onclick="return confirm('¿Estás seguro de que deseas eliminar este usuario?')">Eliminar</a>
+       onclick="return confirm('¿Estás seguro de que deseas eliminar este usuario?')"><i class="bi bi-trash3"></i>Eliminar</a>
 </td>
                 </tr>
             </tbody>
